# Voicer

./: .env.example  .gitignore  README.md  check_mic.py  main.py  pyproject.toml  record_hf.py  record_test.py  test_client.py
core/: agent.py  audio.py  config.py  tools.py  utils.py
